--- a/environment.yaml
+++ b/environment.yaml
@@ -1,4 +1,4 @@
-name: openduck
+name: openduck1
 channels:
   - bioconda
   - omnia
@@ -6,33 +6,35 @@ channels:
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=conda_forge
-  - _openmp_mutex=4.5=1_llvm
+  - _openmp_mutex=4.5=0_gnu
   - alabaster=0.7.12=py_0
-  - ambertools=18.0=0
-  - astor=0.7.1=py_0
+  - arpack=3.7.0=hc6cf775_1
+  - astor=0.8.1=pyh9f0ad1d_0
   - attrs=19.3.0=py_0
   - babel=2.8.0=py_0
-  - backcall=0.1.0=py_0
+  - backcall=0.2.0=pyh9f0ad1d_0
   - bleach=3.1.5=pyh9f0ad1d_0
-  - blosc=1.18.1=he1b5a44_0
+  - blosc=1.19.0=he1b5a44_0
   - boost=1.72.0=py37h9de70de_0
   - boost-cpp=1.72.0=h8e57a91_0
   - brotlipy=0.7.0=py37h8f50634_1000
   - bson=0.5.9=py_0
   - bzip2=1.0.8=h516909a_2
-  - ca-certificates=2020.4.5.1=hecc5488_0
+  - ca-certificates=2020.12.5=ha878542_0
   - cairo=1.16.0=hcf35c78_1003
   - cerberus=1.3.2=py_0
-  - certifi=2020.4.5.1=py37hc8dfbb8_0
+  - certifi=2020.12.5=py37h89c1867_1
   - cffi=1.14.0=py37hd463f26_0
-  - cftime=1.1.3=py37h03ebfcd_0
+  - cftime=1.2.1=py37h03ebfcd_0
   - chardet=3.0.4=py37hc8dfbb8_1006
   - clusterutils=0.3.1=py37_1
-  - cryptography=2.9.2=py37hb09aad4_0
+  - codecov=2.1.11=pyhd3deb0d_0
+  - coverage=5.3.1=py37h5e8e339_1
+  - cryptography=3.0=py37hb09aad4_0
   - cudatoolkit=10.1.243=h6bb024c_0
-  - curl=7.69.1=h33f0ec9_0
+  - curl=7.71.1=he644dc0_3
   - cycler=0.10.0=py_2
-  - cython=0.29.19=py37h3340039_0
+  - cython=0.29.21=py37h3340039_0
   - dbus=1.13.6=he372182_0
   - decorator=4.4.2=py_0
   - defusedxml=0.6.0=py_0
@@ -40,53 +42,56 @@ dependencies:
   - docutils=0.16=py37hc8dfbb8_1
   - entrypoints=0.3=py37hc8dfbb8_1001
   - expat=2.2.9=he1b5a44_2
+  - fftw=3.3.8=nompi_h7f3a6c3_1111
   - fftw3f=3.3.4=2
   - fontconfig=2.13.1=h86ecdb6_1001
   - freetype=2.10.2=he06d7ca_0
   - gettext=0.19.8.1=hc5be6a0_1002
-  - glib=2.64.3=h6f030ca_0
+  - glib=2.65.0=h6f030ca_0
   - gst-plugins-base=1.14.5=h0935bb2_2
   - gstreamer=1.14.5=h36ae1b5_2
   - hdf4=4.2.13=hf30be14_1003
   - hdf5=1.10.6=nompi_h3c11f04_100
   - icu=64.2=he1b5a44_1
-  - idna=2.9=py_1
+  - idna=2.10=pyh9f0ad1d_0
   - imagesize=1.2.0=py_0
-  - importlib-metadata=1.6.0=py37hc8dfbb8_0
-  - importlib_metadata=1.6.0=0
-  - ipykernel=5.3.0=py37h43977f1_0
-  - ipython=7.15.0=py37hc8dfbb8_0
+  - importlib-metadata=1.7.0=py37hc8dfbb8_0
+  - importlib_metadata=1.7.0=0
+  - ipykernel=5.3.3=py37h43977f1_0
+  - ipython=7.16.1=py37h43977f1_0
   - ipython_genutils=0.2.0=py_1
   - ipywidgets=7.5.1=py_0
-  - jedi=0.17.0=py37hc8dfbb8_0
+  - jedi=0.17.2=py37hc8dfbb8_0
   - jinja2=2.11.2=pyh9f0ad1d_0
   - jpeg=9d=h516909a_0
   - jsonschema=3.2.0=py37hc8dfbb8_1
   - jupyter=1.0.0=py_2
-  - jupyter_client=6.1.3=py_0
+  - jupyter_client=6.1.6=py_0
   - jupyter_console=6.1.0=py_1
   - jupyter_core=4.6.3=py37hc8dfbb8_1
   - kiwisolver=1.2.0=py37h99015e2_0
-  - krb5=1.17.1=h2fd8d38_0
-  - latexcodec=2.0.0=py_0
-  - ld_impl_linux-64=2.34=h53a641e_4
-  - libblas=3.8.0=16_openblas
-  - libcblas=3.8.0=16_openblas
+  - krb5=1.17.1=hfafb76e_1
+  - latexcodec=2.0.1=pyh9f0ad1d_0
+  - lcms2=2.11=hbd6801e_0
+  - ld_impl_linux-64=2.34=h53a641e_7
+  - libblas=3.8.0=17_openblas
+  - libcblas=3.8.0=17_openblas
   - libclang=9.0.1=default_hde54327_0
-  - libcurl=7.69.1=hf7181ac_0
-  - libedit=3.1.20170329=hf8c457e_1001
+  - libcurl=7.71.1=hcdd3856_3
+  - libedit=3.1.20191231=h46ee950_1
   - libffi=3.2.1=he1b5a44_1007
   - libgcc=7.2.0=h69d50b8_2
-  - libgcc-ng=9.2.0=h24d8f2e_2
+  - libgcc-ng=9.3.0=h2828fa1_18
   - libgfortran-ng=7.5.0=hdf63c60_6
+  - libgomp=9.3.0=h2828fa1_18
   - libiconv=1.15=h516909a_1006
-  - liblapack=3.8.0=16_openblas
+  - liblapack=3.8.0=17_openblas
   - libllvm9=9.0.1=he513fc3_1
   - libnetcdf=4.7.4=nompi_h84807e1_104
-  - libopenblas=0.3.9=h5ec1e0e_0
+  - libopenblas=0.3.10=pthreads_hb3c22a3_3
   - libpng=1.6.37=hed695b0_1
   - libsodium=1.0.17=h516909a_0
-  - libssh2=1.9.0=hab1572f_2
+  - libssh2=1.9.0=hab1572f_4
   - libstdcxx-ng=9.2.0=hdf63c60_2
   - libtiff=4.1.0=hc7e4089_6
   - libuuid=2.32.1=h14c3975_1000
@@ -94,60 +99,67 @@ dependencies:
   - libxcb=1.13=h14c3975_1002
   - libxkbcommon=0.10.0=he1b5a44_0
   - libxml2=2.9.10=hee79883_0
-  - llvm-openmp=10.0.0=hc9558a2_0
+  - libxslt=1.1.33=h31b3aaa_0
+  - lxml=4.6.2=py37h77fd288_1
   - lz4-c=1.9.2=he1b5a44_1
   - lzo=2.10=h14c3975_1000
   - markupsafe=1.1.1=py37h8f50634_1
-  - matplotlib=3.2.1=0
-  - matplotlib-base=3.2.1=py37h30547a4_0
+  - matplotlib=3.3.0=1
+  - matplotlib-base=3.3.0=py37hd478181_1
   - mdtraj=1.9.4=py37h4112681_0
   - mistune=0.8.4=py37h8f50634_1001
   - mock=4.0.2=py37hc8dfbb8_0
+  - more-itertools=8.4.0=py_0
   - mpich=3.2=4
   - mpiplus=v0.0.1=py37_1000
   - msgpack-python=1.0.0=py37h99015e2_1
   - nbconvert=5.6.1=py37hc8dfbb8_1
-  - nbformat=5.0.6=py_0
-  - ncurses=6.1=hf484d3e_1002
+  - nbformat=5.0.7=py_0
+  - ncurses=6.2=he1b5a44_1
+  - netcdf-fortran=4.5.3=nompi_hfef6a68_100
   - netcdf4=1.5.3=nompi_py37hdc49583_105
   - networkx=2.4=py_1
-  - notebook=6.0.3=py37hc8dfbb8_0
-  - nspr=4.25=he1b5a44_0
+  - nglview=1.1.7=py_0
+  - notebook=6.0.3=py37hc8dfbb8_1
+  - nspr=4.26=he1b5a44_0
   - nss=3.47=he751ad9_0
   - numexpr=2.7.1=py37h0da4684_1
-  - numpy=1.18.4=py37h8960a57_0
-  - numpydoc=1.0.0=pyh9f0ad1d_0
+  - numpy=1.19.0=py37h8960a57_0
+  - numpydoc=1.1.0=pyh9f0ad1d_0
   - olefile=0.46=py_0
   - openduck=0.1.2=py_0
-  - openforcefield=0.6.0=py37_1
+  - openforcefield=0.7.1=pyh39e3cac_0
   - openforcefields=1.2.0=py37_0
   - openmm=7.4.1=py37_cuda101_rc_1
-  - openmmtools=0.19.0=py37_1
-  - openmoltools=0.8.5=py37_0
-  - openssl=1.1.1g=h516909a_0
+  - openmmforcefields=0.7.4=py_0
+  - openmmtools=0.20.0=py37_0
+  - openmoltools=0.8.7=py37_0
+  - openssl=1.1.1i=h7f98852_0
   - oset=0.1.3=py37_1
   - packaging=20.4=pyh9f0ad1d_0
-  - pandas=1.0.4=py37h0da4684_0
-  - pandoc=2.9.2.1=0
+  - pandas=1.0.5=py37h0da4684_0
+  - pandoc=2.10=h14c3975_0
   - pandocfilters=1.4.2=py_1
-  - parmed=3.2.0=py37_0
   - parso=0.7.0=pyh9f0ad1d_0
   - pcre=8.44=he1b5a44_0
   - pdbfixer=1.6=py37_0
+  - perl=5.26.2=h516909a_1006
   - pexpect=4.8.0=py37hc8dfbb8_1
   - pickleshare=0.7.5=py37hc8dfbb8_1001
-  - pillow=7.1.2=py37h718be6c_0
+  - pillow=7.2.0=py37h718be6c_1
   - pip=20.1.1=py_1
   - pixman=0.38.0=h516909a_1003
+  - pluggy=0.13.1=py37hc8dfbb8_2
   - prometheus_client=0.8.0=pyh9f0ad1d_0
-  - prompt-toolkit=3.0.5=py_0
-  - prompt_toolkit=3.0.5=0
+  - prompt-toolkit=3.0.5=py_1
+  - prompt_toolkit=3.0.5=1
   - pthread-stubs=0.4=h14c3975_1001
   - ptyprocess=0.6.0=py_1001
+  - py=1.9.0=pyh9f0ad1d_0
   - pybtex=0.22.2=py37hc8dfbb8_1
   - pybtex-docutils=0.2.1=py37_1
   - pycairo=1.19.1=py37h01af8b0_3
-  - pycparser=2.20=py_0
+  - pycparser=2.20=pyh9f0ad1d_2
   - pygments=2.6.1=py_0
   - pymbar=3.0.5=py37hc1659b7_0
   - pyopenssl=19.1.0=py_1
@@ -156,6 +168,8 @@ dependencies:
   - pyrsistent=0.16.0=py37h8f50634_0
   - pysocks=1.7.1=py37hc8dfbb8_1
   - pytables=3.6.1=py37h56451d4_2
+  - pytest=5.4.3=py37hc8dfbb8_0
+  - pytest-cov=2.10.1=pyh9f0ad1d_0
   - python=3.7.6=cpython_h8356626_6
   - python-dateutil=2.8.1=py_0
   - python_abi=3.7=1_cp37m
@@ -163,19 +177,19 @@ dependencies:
   - pyyaml=5.3.1=py37h8f50634_0
   - pyzmq=19.0.1=py37hac76be4_0
   - qt=5.12.5=hd8c4c69_1
-  - qtconsole=4.7.4=pyh9f0ad1d_0
+  - qtconsole=4.7.5=pyh9f0ad1d_0
   - qtpy=1.9.0=py_0
-  - rdkit=2020.03.2=py37hdd87690_0
-  - readline=8.0=hf8c457e_0
-  - requests=2.23.0=pyh8c360ce_2
-  - scipy=1.4.1=py37ha3d9a3c_3
+  - rdkit=2020.03.4=py37hdd87690_0
+  - readline=8.0=he28a2e2_2
+  - requests=2.24.0=pyh9f0ad1d_0
+  - scipy=1.5.1=py37ha3d9a3c_0
   - send2trash=1.5.0=py_0
-  - setuptools=47.1.1=py37hc8dfbb8_0
+  - setuptools=49.2.0=py37hc8dfbb8_0
   - six=1.15.0=pyh9f0ad1d_0
   - smirnoff99frosst=1.1.0=py37_1
-  - snappy=1.1.8=he1b5a44_1
+  - snappy=1.1.8=he1b5a44_3
   - snowballstemmer=2.0.0=py_0
-  - sphinx=3.0.4=py_0
+  - sphinx=3.1.2=py_0
   - sphinxcontrib-applehelp=1.0.2=py_0
   - sphinxcontrib-bibtex=1.0.0=py_0
   - sphinxcontrib-devhelp=1.0.2=py_0
@@ -183,18 +197,19 @@ dependencies:
   - sphinxcontrib-jsmath=1.0.1=py_0
   - sphinxcontrib-qthelp=1.0.3=py_0
   - sphinxcontrib-serializinghtml=1.1.4=py_0
-  - sqlite=3.30.1=hcee41ef_0
+  - sqlite=3.32.3=hcee41ef_1
   - terminado=0.8.3=py37hc8dfbb8_1
   - testpath=0.4.4=py_0
+  - tinydb=4.3.0=pyhd3deb0d_0
   - tk=8.6.10=hed695b0_0
   - toml=0.10.1=pyh9f0ad1d_0
   - tornado=6.0.4=py37h8f50634_1
   - traitlets=4.3.3=py37hc8dfbb8_1
-  - urllib3=1.25.9=py_0
-  - wcwidth=0.2.2=pyh9f0ad1d_0
+  - urllib3=1.25.10=py_0
+  - wcwidth=0.2.5=pyh9f0ad1d_0
   - webencodings=0.5.1=py_1
   - wheel=0.34.2=py_1
-  - widgetsnbextension=3.5.1=py37_0
+  - widgetsnbextension=3.5.1=py37hc8dfbb8_1
   - xmltodict=0.12.0=py_0
   - xorg-kbproto=1.0.7=h14c3975_1002
   - xorg-libice=1.0.10=h516909a_0
@@ -204,19 +219,28 @@ dependencies:
   - xorg-libxdmcp=1.1.3=h516909a_0
   - xorg-libxext=1.3.4=h516909a_0
   - xorg-libxrender=0.9.10=h516909a_1002
+  - xorg-libxt=1.2.0=h516909a_0
   - xorg-renderproto=0.11.1=h14c3975_1002
   - xorg-xextproto=7.3.0=h14c3975_1002
   - xorg-xproto=7.0.31=h14c3975_1007
-  - xz=5.2.5=h516909a_0
+  - xz=5.2.5=h516909a_1
   - yaml=0.2.5=h516909a_0
   - yank=0.25.2=py37_1
   - zeromq=4.3.2=he1b5a44_2
   - zipp=3.1.0=py_0
   - zlib=1.2.11=h516909a_1006
-  - zstd=1.4.4=h6597ccf_3
+  - zstd=1.4.5=h6597ccf_1
   - pip:
+    - amberlite==16.0
+    - ambertools==17.0
+    - mmpbsa-py==16.0
+    - packmol-memgen==1.1.0rc0
+    - parmed==at20RC5+54.g5702a232fe.dirty
+    - pdb4amber==1.7.dev0
     - pyqt5-sip==4.19.18
     - pyqtchart==5.12
     - pyqtwebengine==5.12.1
-prefix: /home/jin76872/miniconda/envs/openduck
+    - pytraj==2.0.5
+    - sander==16.0
+prefix: /home/jin76872/miniconda/envs/openduck1
 
