--- a/environment.yaml
+++ b/environment.yaml
@@ -1,4 +1,4 @@
-name: openduck1
+name: openduck
 channels:
   - bioconda
   - omnia
@@ -6,241 +6,254 @@ channels:
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=conda_forge
-  - _openmp_mutex=4.5=0_gnu
+  - _openmp_mutex=4.5=1_gnu
   - alabaster=0.7.12=py_0
-  - arpack=3.7.0=hc6cf775_1
-  - astor=0.8.1=pyh9f0ad1d_0
-  - attrs=19.3.0=py_0
-  - babel=2.8.0=py_0
+  - argon2-cffi=20.1.0=py37h5e8e339_2
+  - arpack=3.7.0=h236a147_2
+  - astunparse=1.6.3=pyhd8ed1ab_0
+  - async_generator=1.10=py_0
+  - attrs=20.3.0=pyhd3deb0d_0
+  - babel=2.9.0=pyhd3deb0d_0
   - backcall=0.2.0=pyh9f0ad1d_0
-  - bleach=3.1.5=pyh9f0ad1d_0
-  - blosc=1.19.0=he1b5a44_0
-  - boost=1.72.0=py37h9de70de_0
-  - boost-cpp=1.72.0=h8e57a91_0
-  - brotlipy=0.7.0=py37h8f50634_1000
+  - backports=1.0=py_2
+  - backports.functools_lru_cache=1.6.1=py_0
+  - bleach=3.3.0=pyh44b312d_0
+  - blosc=1.21.0=h9c3ff4c_0
+  - boost=1.74.0=py37h6dcda5c_3
+  - boost-cpp=1.74.0=hc6e9bd1_2
+  - brotlipy=0.7.0=py37h5e8e339_1001
   - bson=0.5.9=py_0
-  - bzip2=1.0.8=h516909a_2
+  - bzip2=1.0.8=h7f98852_4
   - ca-certificates=2020.12.5=ha878542_0
-  - cairo=1.16.0=hcf35c78_1003
+  - cairo=1.16.0=h7979940_1007
   - cerberus=1.3.2=py_0
   - certifi=2020.12.5=py37h89c1867_1
-  - cffi=1.14.0=py37hd463f26_0
-  - cftime=1.2.1=py37h03ebfcd_0
-  - chardet=3.0.4=py37hc8dfbb8_1006
+  - cffi=1.14.4=py37hc58025e_1
+  - cftime=1.4.1=py37h902c9e0_0
+  - chardet=4.0.0=py37h89c1867_1
   - clusterutils=0.3.1=py37_1
-  - codecov=2.1.11=pyhd3deb0d_0
-  - coverage=5.3.1=py37h5e8e339_1
-  - cryptography=3.0=py37hb09aad4_0
-  - cudatoolkit=10.1.243=h6bb024c_0
+  - colorama=0.4.4=pyh9f0ad1d_0
+  - cryptography=3.3.1=py37h7f0c10b_1
+  - cudatoolkit=10.1.243=h036e899_7
   - curl=7.71.1=he644dc0_3
   - cycler=0.10.0=py_2
-  - cython=0.29.21=py37h3340039_0
-  - dbus=1.13.6=he372182_0
+  - cython=0.29.21=py37hcd2ae1e_2
+  - dbus=1.13.6=hfdff14a_1
   - decorator=4.4.2=py_0
   - defusedxml=0.6.0=py_0
   - docopt=0.6.2=py_1
-  - docutils=0.16=py37hc8dfbb8_1
-  - entrypoints=0.3=py37hc8dfbb8_1001
-  - expat=2.2.9=he1b5a44_2
-  - fftw=3.3.8=nompi_h7f3a6c3_1111
+  - docutils=0.16=py37h89c1867_3
+  - entrypoints=0.3=pyhd8ed1ab_1003
+  - expat=2.2.10=h9c3ff4c_0
+  - fftw=3.3.9=nompi_h74d3f13_100
   - fftw3f=3.3.4=2
-  - fontconfig=2.13.1=h86ecdb6_1001
-  - freetype=2.10.2=he06d7ca_0
-  - gettext=0.19.8.1=hc5be6a0_1002
-  - glib=2.65.0=h6f030ca_0
+  - fontconfig=2.13.1=hba837de_1004
+  - freetype=2.10.4=h0708190_1
+  - gettext=0.19.8.1=h0b5b191_1005
+  - glib=2.66.6=h9c3ff4c_3
+  - glib-tools=2.66.6=h9c3ff4c_3
   - gst-plugins-base=1.14.5=h0935bb2_2
-  - gstreamer=1.14.5=h36ae1b5_2
-  - hdf4=4.2.13=hf30be14_1003
-  - hdf5=1.10.6=nompi_h3c11f04_100
-  - icu=64.2=he1b5a44_1
+  - gstreamer=1.18.3=h3560a44_0
+  - hdf4=4.2.13=h10796ff_1004
+  - hdf5=1.10.6=nompi_h6a2412b_1114
+  - icu=68.1=h58526e2_0
   - idna=2.10=pyh9f0ad1d_0
   - imagesize=1.2.0=py_0
-  - importlib-metadata=1.7.0=py37hc8dfbb8_0
-  - importlib_metadata=1.7.0=0
-  - ipykernel=5.3.3=py37h43977f1_0
-  - ipython=7.16.1=py37h43977f1_0
+  - importlib-metadata=3.4.0=py37h89c1867_0
+  - importlib_metadata=3.4.0=hd8ed1ab_0
+  - iniconfig=1.1.1=pyh9f0ad1d_0
+  - ipykernel=5.4.2=py37h888b3d9_0
+  - ipython=7.20.0=py37h888b3d9_2
   - ipython_genutils=0.2.0=py_1
-  - ipywidgets=7.5.1=py_0
-  - jedi=0.17.2=py37hc8dfbb8_0
-  - jinja2=2.11.2=pyh9f0ad1d_0
-  - jpeg=9d=h516909a_0
-  - jsonschema=3.2.0=py37hc8dfbb8_1
-  - jupyter=1.0.0=py_2
-  - jupyter_client=6.1.6=py_0
-  - jupyter_console=6.1.0=py_1
-  - jupyter_core=4.6.3=py37hc8dfbb8_1
-  - kiwisolver=1.2.0=py37h99015e2_0
-  - krb5=1.17.1=hfafb76e_1
+  - ipywidgets=7.6.3=pyhd3deb0d_0
+  - jedi=0.18.0=py37h89c1867_2
+  - jinja2=2.11.3=pyh44b312d_0
+  - jpeg=9d=h36c2ea0_0
+  - jsonschema=3.2.0=py_2
+  - jupyter=1.0.0=py37h89c1867_6
+  - jupyter_client=6.1.11=pyhd8ed1ab_1
+  - jupyter_console=6.2.0=py_0
+  - jupyter_core=4.7.1=py37h89c1867_0
+  - jupyterlab_pygments=0.1.2=pyh9f0ad1d_0
+  - jupyterlab_widgets=1.0.0=pyhd8ed1ab_1
+  - kiwisolver=1.3.1=py37h2527ec5_1
+  - krb5=1.17.2=h926e7f8_0
   - latexcodec=2.0.1=pyh9f0ad1d_0
-  - lcms2=2.11=hbd6801e_0
-  - ld_impl_linux-64=2.34=h53a641e_7
-  - libblas=3.8.0=17_openblas
-  - libcblas=3.8.0=17_openblas
-  - libclang=9.0.1=default_hde54327_0
+  - lcms2=2.12=hddcbb42_0
+  - ld_impl_linux-64=2.35.1=hea4e1c9_2
+  - libblas=3.9.0=8_openblas
+  - libcblas=3.9.0=8_openblas
+  - libclang=11.0.1=default_ha53f305_1
   - libcurl=7.71.1=hcdd3856_3
-  - libedit=3.1.20191231=h46ee950_1
-  - libffi=3.2.1=he1b5a44_1007
+  - libedit=3.1.20191231=he28a2e2_2
+  - libevent=2.1.10=hcdb4288_3
+  - libffi=3.3=h58526e2_2
   - libgcc=7.2.0=h69d50b8_2
   - libgcc-ng=9.3.0=h2828fa1_18
-  - libgfortran-ng=7.5.0=hdf63c60_6
+  - libgfortran-ng=9.3.0=hff62375_18
+  - libgfortran5=9.3.0=hff62375_18
+  - libglib=2.66.6=h1f3bc88_3
   - libgomp=9.3.0=h2828fa1_18
-  - libiconv=1.15=h516909a_1006
-  - liblapack=3.8.0=17_openblas
-  - libllvm9=9.0.1=he513fc3_1
-  - libnetcdf=4.7.4=nompi_h84807e1_104
-  - libopenblas=0.3.10=pthreads_hb3c22a3_3
-  - libpng=1.6.37=hed695b0_1
-  - libsodium=1.0.17=h516909a_0
-  - libssh2=1.9.0=hab1572f_4
-  - libstdcxx-ng=9.2.0=hdf63c60_2
-  - libtiff=4.1.0=hc7e4089_6
-  - libuuid=2.32.1=h14c3975_1000
-  - libwebp-base=1.1.0=h516909a_3
-  - libxcb=1.13=h14c3975_1002
-  - libxkbcommon=0.10.0=he1b5a44_0
-  - libxml2=2.9.10=hee79883_0
-  - libxslt=1.1.33=h31b3aaa_0
-  - lxml=4.6.2=py37h77fd288_1
-  - lz4-c=1.9.2=he1b5a44_1
-  - lzo=2.10=h14c3975_1000
-  - markupsafe=1.1.1=py37h8f50634_1
-  - matplotlib=3.3.0=1
-  - matplotlib-base=3.3.0=py37hd478181_1
-  - mdtraj=1.9.4=py37h4112681_0
-  - mistune=0.8.4=py37h8f50634_1001
-  - mock=4.0.2=py37hc8dfbb8_0
-  - more-itertools=8.4.0=py_0
+  - libiconv=1.16=h516909a_0
+  - liblapack=3.9.0=8_openblas
+  - libllvm11=11.0.1=hf817b99_0
+  - libnetcdf=4.7.4=nompi_h56d31a8_107
+  - libopenblas=0.3.12=pthreads_h4812303_1
+  - libpng=1.6.37=h21135ba_2
+  - libpq=12.3=h255efa7_3
+  - libsodium=1.0.18=h36c2ea0_1
+  - libssh2=1.9.0=hab1572f_5
+  - libstdcxx-ng=9.3.0=h6de172a_18
+  - libtiff=4.2.0=hdc55705_0
+  - libuuid=2.32.1=h7f98852_1000
+  - libwebp-base=1.2.0=h7f98852_0
+  - libxcb=1.13=h7f98852_1003
+  - libxkbcommon=1.0.3=he3ba5ed_0
+  - libxml2=2.9.10=h72842e0_3
+  - lz4-c=1.9.3=h9c3ff4c_0
+  - lzo=2.10=h516909a_1000
+  - markupsafe=1.1.1=py37h5e8e339_3
+  - matplotlib=3.3.4=py37h89c1867_0
+  - matplotlib-base=3.3.4=py37h0c9df89_0
+  - mdtraj=1.9.5=py37hd0d7e5a_1
+  - mistune=0.8.4=py37h5e8e339_1003
+  - mock=4.0.3=py37h89c1867_1
+  - more-itertools=8.7.0=pyhd8ed1ab_0
   - mpich=3.2=4
-  - mpiplus=v0.0.1=py37_1000
-  - msgpack-python=1.0.0=py37h99015e2_1
-  - nbconvert=5.6.1=py37hc8dfbb8_1
-  - nbformat=5.0.7=py_0
-  - ncurses=6.2=he1b5a44_1
-  - netcdf-fortran=4.5.3=nompi_hfef6a68_100
-  - netcdf4=1.5.3=nompi_py37hdc49583_105
-  - networkx=2.4=py_1
+  - mpiplus=v0.0.1=py37hc8dfbb8_1002
+  - msgpack-python=1.0.2=py37h2527ec5_1
+  - mysql-common=8.0.22=ha770c72_3
+  - mysql-libs=8.0.22=h935591d_3
+  - nbclient=0.5.2=pyhd8ed1ab_0
+  - nbconvert=6.0.7=py37h89c1867_3
+  - nbformat=5.1.2=pyhd8ed1ab_1
+  - ncurses=6.2=h58526e2_4
+  - nest-asyncio=1.4.3=pyhd8ed1ab_0
+  - netcdf-fortran=4.5.3=nompi_h1a0d97b_101
+  - netcdf4=1.5.5.1=nompi_py37hdbee05a_101
+  - networkx=2.5=py_0
   - nglview=1.1.7=py_0
-  - notebook=6.0.3=py37hc8dfbb8_1
-  - nspr=4.26=he1b5a44_0
-  - nss=3.47=he751ad9_0
-  - numexpr=2.7.1=py37h0da4684_1
-  - numpy=1.19.0=py37h8960a57_0
-  - numpydoc=1.1.0=pyh9f0ad1d_0
-  - olefile=0.46=py_0
+  - notebook=6.2.0=py37h89c1867_0
+  - nspr=4.29=h9c3ff4c_1
+  - nss=3.61=hb5efdd6_0
+  - numexpr=2.7.2=py37hdc94413_0
+  - numpy=1.20.1=py37haa41c4c_0
+  - numpydoc=1.1.0=py_1
+  - olefile=0.46=pyh9f0ad1d_1
   - openduck=0.1.2=py_0
   - openforcefield=0.7.1=pyh39e3cac_0
-  - openforcefields=1.2.0=py37_0
+  - openforcefields=1.3.0=py_0
   - openmm=7.4.1=py37_cuda101_rc_1
-  - openmmforcefields=0.7.4=py_0
   - openmmtools=0.20.0=py37_0
   - openmoltools=0.8.7=py37_0
   - openssl=1.1.1i=h7f98852_0
   - oset=0.1.3=py37_1
-  - packaging=20.4=pyh9f0ad1d_0
-  - pandas=1.0.5=py37h0da4684_0
-  - pandoc=2.10=h14c3975_0
+  - packaging=20.9=pyh44b312d_0
+  - pandas=1.2.2=py37hdc94413_0
+  - pandoc=2.11.4=h7f98852_0
   - pandocfilters=1.4.2=py_1
-  - parso=0.7.0=pyh9f0ad1d_0
+  - parso=0.8.1=pyhd8ed1ab_0
   - pcre=8.44=he1b5a44_0
-  - pdbfixer=1.6=py37_0
-  - perl=5.26.2=h516909a_1006
-  - pexpect=4.8.0=py37hc8dfbb8_1
-  - pickleshare=0.7.5=py37hc8dfbb8_1001
-  - pillow=7.2.0=py37h718be6c_1
-  - pip=20.1.1=py_1
-  - pixman=0.38.0=h516909a_1003
-  - pluggy=0.13.1=py37hc8dfbb8_2
-  - prometheus_client=0.8.0=pyh9f0ad1d_0
-  - prompt-toolkit=3.0.5=py_1
-  - prompt_toolkit=3.0.5=1
-  - pthread-stubs=0.4=h14c3975_1001
-  - ptyprocess=0.6.0=py_1001
-  - py=1.9.0=pyh9f0ad1d_0
-  - pybtex=0.22.2=py37hc8dfbb8_1
+  - pdbfixer=1.6=py_1
+  - perl=5.32.0=h36c2ea0_0
+  - pexpect=4.8.0=pyh9f0ad1d_2
+  - pickleshare=0.7.5=py_1003
+  - pillow=8.1.0=py37h4600e1f_2
+  - pip=21.0.1=pyhd8ed1ab_0
+  - pixman=0.40.0=h36c2ea0_0
+  - pluggy=0.13.1=py37h89c1867_4
+  - prometheus_client=0.9.0=pyhd3deb0d_0
+  - prompt-toolkit=3.0.14=pyha770c72_0
+  - prompt_toolkit=3.0.14=hd8ed1ab_0
+  - pthread-stubs=0.4=h36c2ea0_1001
+  - ptyprocess=0.7.0=pyhd3deb0d_0
+  - py=1.10.0=pyhd3deb0d_0
+  - pybtex=0.24.0=py37h89c1867_0
   - pybtex-docutils=0.2.1=py37_1
-  - pycairo=1.19.1=py37h01af8b0_3
+  - pycairo=1.20.0=py37h01af8b0_1
   - pycparser=2.20=pyh9f0ad1d_2
-  - pygments=2.6.1=py_0
-  - pymbar=3.0.5=py37hc1659b7_0
-  - pyopenssl=19.1.0=py_1
+  - pygments=2.7.4=pyhd8ed1ab_0
+  - pymbar=3.0.3=py37h3010b51_3
+  - pyopenssl=20.0.1=pyhd8ed1ab_0
   - pyparsing=2.4.7=pyh9f0ad1d_0
-  - pyqt=5.12.3=py37h8685d9f_3
-  - pyrsistent=0.16.0=py37h8f50634_0
-  - pysocks=1.7.1=py37hc8dfbb8_1
-  - pytables=3.6.1=py37h56451d4_2
-  - pytest=5.4.3=py37hc8dfbb8_0
-  - pytest-cov=2.10.1=pyh9f0ad1d_0
-  - python=3.7.6=cpython_h8356626_6
+  - pyqt=5.12.3=py37h89c1867_7
+  - pyqt-impl=5.12.3=py37he336c9b_7
+  - pyqt5-sip=4.19.18=py37hcd2ae1e_7
+  - pyqtchart=5.12=py37he336c9b_7
+  - pyqtwebengine=5.12.1=py37he336c9b_7
+  - pyrsistent=0.17.3=py37h5e8e339_2
+  - pysocks=1.7.1=py37h89c1867_3
+  - pytables=3.6.1=py37h0c4f3e0_3
+  - pytest=6.2.2=py37h89c1867_0
+  - python=3.7.9=hffdb5ce_0_cpython
   - python-dateutil=2.8.1=py_0
   - python_abi=3.7=1_cp37m
-  - pytz=2020.1=pyh9f0ad1d_0
-  - pyyaml=5.3.1=py37h8f50634_0
-  - pyzmq=19.0.1=py37hac76be4_0
-  - qt=5.12.5=hd8c4c69_1
-  - qtconsole=4.7.5=pyh9f0ad1d_0
+  - pytz=2021.1=pyhd8ed1ab_0
+  - pyyaml=5.4.1=py37h5e8e339_0
+  - pyzmq=22.0.1=py37h499b945_0
+  - qt=5.12.9=h9d6b050_2
+  - qtconsole=5.0.2=pyhd8ed1ab_0
   - qtpy=1.9.0=py_0
-  - rdkit=2020.03.4=py37hdd87690_0
+  - rdkit=2020.09.4=py37he53b9e1_0
   - readline=8.0=he28a2e2_2
-  - requests=2.24.0=pyh9f0ad1d_0
-  - scipy=1.5.1=py37ha3d9a3c_0
+  - reportlab=3.5.60=py37h69800bb_0
+  - requests=2.25.1=pyhd3deb0d_0
+  - scipy=1.6.0=py37h14a347d_0
   - send2trash=1.5.0=py_0
-  - setuptools=49.2.0=py37hc8dfbb8_0
+  - setuptools=49.6.0=py37h89c1867_3
   - six=1.15.0=pyh9f0ad1d_0
-  - smirnoff99frosst=1.1.0=py37_1
+  - smirnoff99frosst=1.1.0=py_2
   - snappy=1.1.8=he1b5a44_3
-  - snowballstemmer=2.0.0=py_0
-  - sphinx=3.1.2=py_0
+  - snowballstemmer=2.1.0=pyhd8ed1ab_0
+  - sphinx=3.4.3=pyhd8ed1ab_0
   - sphinxcontrib-applehelp=1.0.2=py_0
-  - sphinxcontrib-bibtex=1.0.0=py_0
+  - sphinxcontrib-bibtex=2.0.0=pyhd8ed1ab_0
   - sphinxcontrib-devhelp=1.0.2=py_0
   - sphinxcontrib-htmlhelp=1.0.3=py_0
   - sphinxcontrib-jsmath=1.0.1=py_0
   - sphinxcontrib-qthelp=1.0.3=py_0
   - sphinxcontrib-serializinghtml=1.1.4=py_0
-  - sqlite=3.32.3=hcee41ef_1
-  - terminado=0.8.3=py37hc8dfbb8_1
+  - sqlalchemy=1.3.23=py37h5e8e339_0
+  - sqlite=3.34.0=h74cdb3f_0
+  - terminado=0.9.2=py37h89c1867_0
   - testpath=0.4.4=py_0
-  - tinydb=4.3.0=pyhd3deb0d_0
-  - tk=8.6.10=hed695b0_0
-  - toml=0.10.1=pyh9f0ad1d_0
-  - tornado=6.0.4=py37h8f50634_1
-  - traitlets=4.3.3=py37hc8dfbb8_1
-  - urllib3=1.25.10=py_0
-  - wcwidth=0.2.5=pyh9f0ad1d_0
+  - tk=8.6.10=h21135ba_1
+  - toml=0.10.2=pyhd8ed1ab_0
+  - tornado=6.1=py37h5e8e339_1
+  - traitlets=5.0.5=py_0
+  - typing_extensions=3.7.4.3=py_0
+  - urllib3=1.26.3=pyhd8ed1ab_0
+  - wcwidth=0.2.5=pyh9f0ad1d_2
   - webencodings=0.5.1=py_1
-  - wheel=0.34.2=py_1
-  - widgetsnbextension=3.5.1=py37hc8dfbb8_1
+  - wheel=0.36.2=pyhd3deb0d_0
+  - widgetsnbextension=3.5.1=py37h89c1867_4
   - xmltodict=0.12.0=py_0
-  - xorg-kbproto=1.0.7=h14c3975_1002
+  - xorg-kbproto=1.0.7=h7f98852_1002
   - xorg-libice=1.0.10=h516909a_0
   - xorg-libsm=1.2.3=h84519dc_1000
-  - xorg-libx11=1.6.9=h516909a_0
-  - xorg-libxau=1.0.9=h14c3975_0
-  - xorg-libxdmcp=1.1.3=h516909a_0
+  - xorg-libx11=1.6.12=h516909a_0
+  - xorg-libxau=1.0.9=h7f98852_0
+  - xorg-libxdmcp=1.1.3=h7f98852_0
   - xorg-libxext=1.3.4=h516909a_0
   - xorg-libxrender=0.9.10=h516909a_1002
-  - xorg-libxt=1.2.0=h516909a_0
+  - xorg-libxt=1.2.1=h7f98852_0
   - xorg-renderproto=0.11.1=h14c3975_1002
-  - xorg-xextproto=7.3.0=h14c3975_1002
-  - xorg-xproto=7.0.31=h14c3975_1007
+  - xorg-xextproto=7.3.0=h7f98852_1002
+  - xorg-xproto=7.0.31=h7f98852_1007
   - xz=5.2.5=h516909a_1
   - yaml=0.2.5=h516909a_0
-  - yank=0.25.2=py37_1
-  - zeromq=4.3.2=he1b5a44_2
-  - zipp=3.1.0=py_0
-  - zlib=1.2.11=h516909a_1006
-  - zstd=1.4.5=h6597ccf_1
+  - yank=0.25.2=py37_2
+  - zeromq=4.3.4=h9c3ff4c_0
+  - zipp=3.4.0=py_0
+  - zlib=1.2.11=h516909a_1010
+  - zstd=1.4.8=ha95c52a_1
   - pip:
     - amberlite==16.0
-    - ambertools==17.0
+    - ambertools==20.15
     - mmpbsa-py==16.0
     - packmol-memgen==1.1.0rc0
     - parmed==at20RC5+54.g5702a232fe.dirty
     - pdb4amber==1.7.dev0
-    - pyqt5-sip==4.19.18
-    - pyqtchart==5.12
-    - pyqtwebengine==5.12.1
     - pytraj==2.0.5
     - sander==16.0
-prefix: /home/jin76872/miniconda/envs/openduck1
-
+prefix: /data/michaela/miniconda_envs/envs/openduck
