--- a/environment.yaml
+++ b/environment.yaml
@@ -1,259 +1,14 @@
-name: openduck
+name: openduck_latest
 channels:
   - bioconda
   - omnia
   - conda-forge
   - defaults
 dependencies:
-  - _libgcc_mutex=0.1=conda_forge
-  - _openmp_mutex=4.5=1_gnu
-  - alabaster=0.7.12=py_0
-  - argon2-cffi=20.1.0=py37h5e8e339_2
-  - arpack=3.7.0=h236a147_2
-  - astunparse=1.6.3=pyhd8ed1ab_0
-  - async_generator=1.10=py_0
-  - attrs=20.3.0=pyhd3deb0d_0
-  - babel=2.9.0=pyhd3deb0d_0
-  - backcall=0.2.0=pyh9f0ad1d_0
-  - backports=1.0=py_2
-  - backports.functools_lru_cache=1.6.1=py_0
-  - bleach=3.3.0=pyh44b312d_0
-  - blosc=1.21.0=h9c3ff4c_0
-  - boost=1.74.0=py37h6dcda5c_3
-  - boost-cpp=1.74.0=hc6e9bd1_2
-  - brotlipy=0.7.0=py37h5e8e339_1001
-  - bson=0.5.9=py_0
-  - bzip2=1.0.8=h7f98852_4
-  - ca-certificates=2020.12.5=ha878542_0
-  - cairo=1.16.0=h7979940_1007
-  - cerberus=1.3.2=py_0
-  - certifi=2020.12.5=py37h89c1867_1
-  - cffi=1.14.4=py37hc58025e_1
-  - cftime=1.4.1=py37h902c9e0_0
-  - chardet=4.0.0=py37h89c1867_1
-  - clusterutils=0.3.1=py37_1
-  - colorama=0.4.4=pyh9f0ad1d_0
-  - cryptography=3.3.1=py37h7f0c10b_1
-  - cudatoolkit=10.1.243=h036e899_7
-  - curl=7.71.1=he644dc0_3
-  - cycler=0.10.0=py_2
-  - cython=0.29.21=py37hcd2ae1e_2
-  - dbus=1.13.6=hfdff14a_1
-  - decorator=4.4.2=py_0
-  - defusedxml=0.6.0=py_0
-  - docopt=0.6.2=py_1
-  - docutils=0.16=py37h89c1867_3
-  - entrypoints=0.3=pyhd8ed1ab_1003
-  - expat=2.2.10=h9c3ff4c_0
-  - fftw=3.3.9=nompi_h74d3f13_100
-  - fftw3f=3.3.4=2
-  - fontconfig=2.13.1=hba837de_1004
-  - freetype=2.10.4=h0708190_1
-  - gettext=0.19.8.1=h0b5b191_1005
-  - glib=2.66.6=h9c3ff4c_3
-  - glib-tools=2.66.6=h9c3ff4c_3
-  - gst-plugins-base=1.14.5=h0935bb2_2
-  - gstreamer=1.18.3=h3560a44_0
-  - hdf4=4.2.13=h10796ff_1004
-  - hdf5=1.10.6=nompi_h6a2412b_1114
-  - icu=68.1=h58526e2_0
-  - idna=2.10=pyh9f0ad1d_0
-  - imagesize=1.2.0=py_0
-  - importlib-metadata=3.4.0=py37h89c1867_0
-  - importlib_metadata=3.4.0=hd8ed1ab_0
-  - iniconfig=1.1.1=pyh9f0ad1d_0
-  - ipykernel=5.4.2=py37h888b3d9_0
-  - ipython=7.20.0=py37h888b3d9_2
-  - ipython_genutils=0.2.0=py_1
-  - ipywidgets=7.6.3=pyhd3deb0d_0
-  - jedi=0.18.0=py37h89c1867_2
-  - jinja2=2.11.3=pyh44b312d_0
-  - jpeg=9d=h36c2ea0_0
-  - jsonschema=3.2.0=py_2
-  - jupyter=1.0.0=py37h89c1867_6
-  - jupyter_client=6.1.11=pyhd8ed1ab_1
-  - jupyter_console=6.2.0=py_0
-  - jupyter_core=4.7.1=py37h89c1867_0
-  - jupyterlab_pygments=0.1.2=pyh9f0ad1d_0
-  - jupyterlab_widgets=1.0.0=pyhd8ed1ab_1
-  - kiwisolver=1.3.1=py37h2527ec5_1
-  - krb5=1.17.2=h926e7f8_0
-  - latexcodec=2.0.1=pyh9f0ad1d_0
-  - lcms2=2.12=hddcbb42_0
-  - ld_impl_linux-64=2.35.1=hea4e1c9_2
-  - libblas=3.9.0=8_openblas
-  - libcblas=3.9.0=8_openblas
-  - libclang=11.0.1=default_ha53f305_1
-  - libcurl=7.71.1=hcdd3856_3
-  - libedit=3.1.20191231=he28a2e2_2
-  - libevent=2.1.10=hcdb4288_3
-  - libffi=3.3=h58526e2_2
-  - libgcc=7.2.0=h69d50b8_2
-  - libgcc-ng=9.3.0=h2828fa1_18
-  - libgfortran-ng=9.3.0=hff62375_18
-  - libgfortran5=9.3.0=hff62375_18
-  - libglib=2.66.6=h1f3bc88_3
-  - libgomp=9.3.0=h2828fa1_18
-  - libiconv=1.16=h516909a_0
-  - liblapack=3.9.0=8_openblas
-  - libllvm11=11.0.1=hf817b99_0
-  - libnetcdf=4.7.4=nompi_h56d31a8_107
-  - libopenblas=0.3.12=pthreads_h4812303_1
-  - libpng=1.6.37=h21135ba_2
-  - libpq=12.3=h255efa7_3
-  - libsodium=1.0.18=h36c2ea0_1
-  - libssh2=1.9.0=hab1572f_5
-  - libstdcxx-ng=9.3.0=h6de172a_18
-  - libtiff=4.2.0=hdc55705_0
-  - libuuid=2.32.1=h7f98852_1000
-  - libwebp-base=1.2.0=h7f98852_0
-  - libxcb=1.13=h7f98852_1003
-  - libxkbcommon=1.0.3=he3ba5ed_0
-  - libxml2=2.9.10=h72842e0_3
-  - lz4-c=1.9.3=h9c3ff4c_0
-  - lzo=2.10=h516909a_1000
-  - markupsafe=1.1.1=py37h5e8e339_3
-  - matplotlib=3.3.4=py37h89c1867_0
-  - matplotlib-base=3.3.4=py37h0c9df89_0
-  - mdtraj=1.9.5=py37hd0d7e5a_1
-  - mistune=0.8.4=py37h5e8e339_1003
-  - mock=4.0.3=py37h89c1867_1
-  - more-itertools=8.7.0=pyhd8ed1ab_0
-  - mpich=3.2=4
-  - mpiplus=v0.0.1=py37hc8dfbb8_1002
-  - msgpack-python=1.0.2=py37h2527ec5_1
-  - mysql-common=8.0.22=ha770c72_3
-  - mysql-libs=8.0.22=h935591d_3
-  - nbclient=0.5.2=pyhd8ed1ab_0
-  - nbconvert=6.0.7=py37h89c1867_3
-  - nbformat=5.1.2=pyhd8ed1ab_1
-  - ncurses=6.2=h58526e2_4
-  - nest-asyncio=1.4.3=pyhd8ed1ab_0
-  - netcdf-fortran=4.5.3=nompi_h1a0d97b_101
-  - netcdf4=1.5.5.1=nompi_py37hdbee05a_101
-  - networkx=2.5=py_0
-  - nglview=1.1.7=py_0
-  - notebook=6.2.0=py37h89c1867_0
-  - nspr=4.29=h9c3ff4c_1
-  - nss=3.61=hb5efdd6_0
-  - numexpr=2.7.2=py37hdc94413_0
-  - numpy=1.20.1=py37haa41c4c_0
-  - numpydoc=1.1.0=py_1
-  - olefile=0.46=pyh9f0ad1d_1
-  - openduck=0.1.2=py_0
-  - openforcefield=0.7.1=pyh39e3cac_0
-  - openforcefields=1.3.0=py_0
+  - python=3.7
+  - yank=0.25.2
+  - pdbfixer=1.6
+  - openforcefield
+  - parmed=3.2.0
+  - cudatoolkit=10.1.243
   - openmm=7.4.1=py37_cuda101_rc_1
-  - openmmtools=0.20.0=py37_0
-  - openmoltools=0.8.7=py37_0
-  - openssl=1.1.1i=h7f98852_0
-  - oset=0.1.3=py37_1
-  - packaging=20.9=pyh44b312d_0
-  - pandas=1.2.2=py37hdc94413_0
-  - pandoc=2.11.4=h7f98852_0
-  - pandocfilters=1.4.2=py_1
-  - parso=0.8.1=pyhd8ed1ab_0
-  - pcre=8.44=he1b5a44_0
-  - pdbfixer=1.6=py_1
-  - perl=5.32.0=h36c2ea0_0
-  - pexpect=4.8.0=pyh9f0ad1d_2
-  - pickleshare=0.7.5=py_1003
-  - pillow=8.1.0=py37h4600e1f_2
-  - pip=21.0.1=pyhd8ed1ab_0
-  - pixman=0.40.0=h36c2ea0_0
-  - pluggy=0.13.1=py37h89c1867_4
-  - prometheus_client=0.9.0=pyhd3deb0d_0
-  - prompt-toolkit=3.0.14=pyha770c72_0
-  - prompt_toolkit=3.0.14=hd8ed1ab_0
-  - pthread-stubs=0.4=h36c2ea0_1001
-  - ptyprocess=0.7.0=pyhd3deb0d_0
-  - py=1.10.0=pyhd3deb0d_0
-  - pybtex=0.24.0=py37h89c1867_0
-  - pybtex-docutils=0.2.1=py37_1
-  - pycairo=1.20.0=py37h01af8b0_1
-  - pycparser=2.20=pyh9f0ad1d_2
-  - pygments=2.7.4=pyhd8ed1ab_0
-  - pymbar=3.0.3=py37h3010b51_3
-  - pyopenssl=20.0.1=pyhd8ed1ab_0
-  - pyparsing=2.4.7=pyh9f0ad1d_0
-  - pyqt=5.12.3=py37h89c1867_7
-  - pyqt-impl=5.12.3=py37he336c9b_7
-  - pyqt5-sip=4.19.18=py37hcd2ae1e_7
-  - pyqtchart=5.12=py37he336c9b_7
-  - pyqtwebengine=5.12.1=py37he336c9b_7
-  - pyrsistent=0.17.3=py37h5e8e339_2
-  - pysocks=1.7.1=py37h89c1867_3
-  - pytables=3.6.1=py37h0c4f3e0_3
-  - pytest=6.2.2=py37h89c1867_0
-  - python=3.7.9=hffdb5ce_0_cpython
-  - python-dateutil=2.8.1=py_0
-  - python_abi=3.7=1_cp37m
-  - pytz=2021.1=pyhd8ed1ab_0
-  - pyyaml=5.4.1=py37h5e8e339_0
-  - pyzmq=22.0.1=py37h499b945_0
-  - qt=5.12.9=h9d6b050_2
-  - qtconsole=5.0.2=pyhd8ed1ab_0
-  - qtpy=1.9.0=py_0
-  - rdkit=2020.09.4=py37he53b9e1_0
-  - readline=8.0=he28a2e2_2
-  - reportlab=3.5.60=py37h69800bb_0
-  - requests=2.25.1=pyhd3deb0d_0
-  - scipy=1.6.0=py37h14a347d_0
-  - send2trash=1.5.0=py_0
-  - setuptools=49.6.0=py37h89c1867_3
-  - six=1.15.0=pyh9f0ad1d_0
-  - smirnoff99frosst=1.1.0=py_2
-  - snappy=1.1.8=he1b5a44_3
-  - snowballstemmer=2.1.0=pyhd8ed1ab_0
-  - sphinx=3.4.3=pyhd8ed1ab_0
-  - sphinxcontrib-applehelp=1.0.2=py_0
-  - sphinxcontrib-bibtex=2.0.0=pyhd8ed1ab_0
-  - sphinxcontrib-devhelp=1.0.2=py_0
-  - sphinxcontrib-htmlhelp=1.0.3=py_0
-  - sphinxcontrib-jsmath=1.0.1=py_0
-  - sphinxcontrib-qthelp=1.0.3=py_0
-  - sphinxcontrib-serializinghtml=1.1.4=py_0
-  - sqlalchemy=1.3.23=py37h5e8e339_0
-  - sqlite=3.34.0=h74cdb3f_0
-  - terminado=0.9.2=py37h89c1867_0
-  - testpath=0.4.4=py_0
-  - tk=8.6.10=h21135ba_1
-  - toml=0.10.2=pyhd8ed1ab_0
-  - tornado=6.1=py37h5e8e339_1
-  - traitlets=5.0.5=py_0
-  - typing_extensions=3.7.4.3=py_0
-  - urllib3=1.26.3=pyhd8ed1ab_0
-  - wcwidth=0.2.5=pyh9f0ad1d_2
-  - webencodings=0.5.1=py_1
-  - wheel=0.36.2=pyhd3deb0d_0
-  - widgetsnbextension=3.5.1=py37h89c1867_4
-  - xmltodict=0.12.0=py_0
-  - xorg-kbproto=1.0.7=h7f98852_1002
-  - xorg-libice=1.0.10=h516909a_0
-  - xorg-libsm=1.2.3=h84519dc_1000
-  - xorg-libx11=1.6.12=h516909a_0
-  - xorg-libxau=1.0.9=h7f98852_0
-  - xorg-libxdmcp=1.1.3=h7f98852_0
-  - xorg-libxext=1.3.4=h516909a_0
-  - xorg-libxrender=0.9.10=h516909a_1002
-  - xorg-libxt=1.2.1=h7f98852_0
-  - xorg-renderproto=0.11.1=h14c3975_1002
-  - xorg-xextproto=7.3.0=h7f98852_1002
-  - xorg-xproto=7.0.31=h7f98852_1007
-  - xz=5.2.5=h516909a_1
-  - yaml=0.2.5=h516909a_0
-  - yank=0.25.2=py37_2
-  - zeromq=4.3.4=h9c3ff4c_0
-  - zipp=3.4.0=py_0
-  - zlib=1.2.11=h516909a_1010
-  - zstd=1.4.8=ha95c52a_1
-  - pip:
-    - amberlite==16.0
-    - ambertools==20.15
-    - mmpbsa-py==16.0
-    - packmol-memgen==1.1.0rc0
-    - parmed==at20RC5+54.g5702a232fe.dirty
-    - pdb4amber==1.7.dev0
-    - pytraj==2.0.5
-    - sander==16.0
-prefix: /data/michaela/miniconda_envs/envs/openduck
