--- a/environment.yaml
+++ b/environment.yaml
@@ -8,7 +8,7 @@ dependencies:
   - python=3.7
   - yank=0.25.2
   - pdbfixer=1.6
-  - openforcefield
+  - openforcefield==0.7.2
   - parmed=3.2.0
   - cudatoolkit=10.1.243
   - openmm=7.4.1=py37_cuda101_rc_1
