--- a/environment.yaml
+++ b/environment.yaml
@@ -8,9 +8,9 @@ dependencies:
   - python=3.9
   - yank
   - pdbfixer
-  - openforcefield
+  - openforcefield=0.7.2
   - parmed
   - cudatoolkit
-  - openmm
+  - openmm=7.5
   - openmmforcefields
   - ambertools
