modify deps, small fixes

--- a/environment.yaml
+++ b/environment.yaml
@@ -1,17 +1,15 @@
 name: openduck_latest
 channels:
-  - bioconda
-  - omnia
   - conda-forge
   - defaults
 dependencies:
   - python=3.9
   - yank=0.25.2
-  - pdbfixer=1.6
-  - openforcefield=0.7.2
+  - pdbfixer=1.7
+  - openff-toolkit=0.9.0
   - parmed=3.4.3
   - cudatoolkit=11.7.0
   - openmm=7.5
-  - openmmforcefields=0.7.4
+  - openmmforcefields=0.9.0
   - ambertools=22.0
   - seaborn=0.12
