--- a/duck/templates/amber_inputs/first_heating.in
+++ b/duck/templates/amber_inputs/first_heating.in
@@ -1,7 +1,7 @@
 # Initial heating and velocities generation to 150K
 &cntrl
 imin=0,
-ntx=1,
+ntx=1, iwrap=1,
 ntxo=1, ntpr=2000, ntwx=0, ntwv=0, ntwe=0, ntwr=0, ioutfm=1,
 ntp=0, ntc=2,
 ntb=1, ntf=2, cut=9.0,
